@@ -1,4 +1,2 @@
 Debug log
 Version: 0.3 (Beta)
-14:25:47: Error setting volume: 'App' object has no attribute 'volume_label' | Error type: <class 'AttributeError'>
-14:25:47: This is normal, the volume label is not initialized yet
