@@ -18,3 +18,4 @@ new design
 v 0.3 Stable
 - add "ask every time" & default volume in settings ✅
 - add volume indicator (0-100%) ✅
+- add "reset to default" button in settings ✅
